--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 
         "composer/installers"               : "dev-master",
         "cysha/pxcms-core"                  : "dev-master",
-        "cysha/pxcms-auth"                  : "dev-master"
+        "cysha/pxcms-auth"                  : "dev-master",
+        "cysha/pxcms-pages"                 : "dev-master"
 	},
 	"require-dev":{
         "fzaninotto/faker"                  : "dev-master"
